--- a/priv/ua_inspector/short_codes.device_brands.yml
+++ b/priv/ua_inspector/short_codes.device_brands.yml
@@ -1,8 +1,10 @@
 - "36": "360"
+- "88": "8848"
 - "3Q": "3Q"
 - "4G": "4Good"
 - "AE": "Ace"
 - "AA": "AllCall"
+- "3A": "AllDocube"
 - "AC": "Acer"
 - "00": "Accent"
 - "A9": "Advan"
@@ -15,8 +17,8 @@
 - "AK": "Akai"
 - "1A": "Alba"
 - "AL": "Alcatel"
+- "20": "Alcor"
 - "4A": "Aligator"
-- "3A": "AllDocube"
 - "A2": "Allview"
 - "A7": "Allwinner"
 - "A1": "Altech UEC"
@@ -193,6 +195,7 @@
 - "FL": "Fly"
 - "F1": "FinePower"
 - "FT": "Freetel"
+- "F7": "Fero"
 - "FR": "Forstar"
 - "FO": "Foxconn"
 - "F2": "FORME"
@@ -248,6 +251,7 @@
 - "IJ": "i-Joy"
 - "IC": "iDroid"
 - "IY": "iBerry"
+- "7I": "iBrit"
 - "IH": "iHunt"
 - "IK": "iKoMo"
 - "IE": "iView"
@@ -458,6 +462,7 @@
 - "OU": "OUYA"
 - "OO": "Opsson"
 - "OV": "Overmax"
+- "30": "Ovvi"
 - "OY": "Oysters"
 - "O6": "Oyyu"
 - "OW": "öwn"
@@ -591,6 +596,7 @@
 - "TA": "Tesla"
 - "TK": "Takara"
 - "4T": "Tronsmart"
+- "5R": "Transpeed"
 - "T5": "TB Touch"
 - "TC": "TCL"
 - "T7": "Teclast"
@@ -667,6 +673,7 @@
 - "VL": "Verykool"
 - "V6": "VGO TEL"
 - "VV": "Vivo"
+- "3V": "VVETIME"
 - "VX": "Vertex"
 - "V3": "Vinsoc"
 - "V2": "Vonino"
