--- a/assets/.eslintrc.json
+++ b/assets/.eslintrc.json
@@ -16,6 +16,7 @@
     "no-unused-expressions": [1, { "allowShortCircuit": true }],
     "no-unused-vars": [2, { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
     "jsx-a11y/click-events-have-key-events": [0],
-    "jsx-a11y/no-static-element-interactions": [0]
+    "jsx-a11y/no-static-element-interactions": [0],
+    "react/no-did-update-set-state": [0]
   }
 }
