--- a/config/.env.test
+++ b/config/.env.test
@@ -8,4 +8,5 @@ ENVIRONMENT=test
 MAILER_ADAPTER=Bamboo.TestAdapter
 ADMIN_USER_EMAIL=admin@email.com
 ADMIN_USER_PWD=fakepassword
+ENABLE_EMAIL_VERIFICATION=true
 SELFHOST=false
