--- a/config/.env.dev
+++ b/config/.env.dev
@@ -8,3 +8,5 @@ LOG_LEVEL=debug
 SELFHOST=false
 DISABLE_CRON=true
 ADMIN_USER_IDS=1
+IP_GEOLOCATION_DB=/home/uku/plausible/analytics/city_database.mmdb
+SHOW_CITIES=true
