Update pre-commit versions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,14 +2,14 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v2.2.1"
+    rev: "v2.4.1"
     hooks:
       - id: prettier
         files: "assets/js|assets/css"
         args: [--config, assets/.prettierrc.json]
 
   - repo: https://github.com/awebdeveloper/pre-commit-stylelint
-    rev: 'f792d6b'
+    rev: '0.0.2'
     hooks:
     -   id: stylelint
         additional_dependencies:
@@ -17,7 +17,7 @@ repos:
           - stylelint-config-standard@20.0.0
 
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: 'v7.15.0'
+    rev: 'v8.3.0'
     hooks:
       - id: eslint
         files: "assets/js"
