Build JS before measuring it

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -23,6 +23,8 @@ jobs:
     - run: npm install --prefix ./assets
     - run: npm run lint --prefix ./assets
     - run: npm run check-format --prefix ./assets
+    - run: npm run deploy --prefix ./assets
+    - run: npm run deploy --prefix ./tracker
     - name: Run BundleMon
       run: npm run bundlemon --prefix ./assets
       env:
