Use phoenix javascript from NPM

--- a/assets/package.json
+++ b/assets/package.json
@@ -35,8 +35,8 @@
     "downshift": "^6.1.3",
     "iframe-resizer": "^4.3.2",
     "mini-css-extract-plugin": "^1.6.0",
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix": "1.5.0",
+    "phoenix_html": "2.12",
     "postcss": "^8.3.0",
     "postcss-loader": "^6.1.1",
     "react": "^16.13.1",
