--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         node-version: ${{steps.versions.outputs.nodejs}}
     - run: npm install --prefix ./assets
+    - run: npm install --prefix ./tracker
     - run: npm run lint --prefix ./assets
     - run: npm run check-format --prefix ./assets
     - run: npm run deploy --prefix ./assets
