added invoices section (#1511)
* added invoices section

* fixed formatting

* UI and code style improvements, paddle sandbox setup only on dev environment (fixed)

--- a/config/.env.dev
+++ b/config/.env.dev
@@ -10,3 +10,5 @@ DISABLE_CRON=true
 ADMIN_USER_IDS=1
 IP_GEOLOCATION_DB=/home/uku/plausible/analytics/city_database.mmdb
 SHOW_CITIES=true
+PADDLE_VENDOR_AUTH_CODE=895e20d4efaec0575bb857f44b183217b332d9592e76e69b8a
+PADDLE_VENDOR_ID=3942
