--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -6,13 +6,15 @@ body:
      value: |
        Thanks for taking the time to fill out this bug report!
 
-       Please note that this tracker is only for bugs. Do not use the issue tracker for help, support or feature requests.
+       Please note that this tracker is only for bugs. Do not use the issue tracker for help, customer support or feature requests.
 
-       [Our docs](https://plausible.io/docs) are a great place for most answers, but if you can’t find your answer there, you can [contact us](https://plausible.io/contact).
+       [Our docs](https://plausible.io/docs) are a great place for most answers, but if you can’t find your answer there, you can [contact our customer support](https://plausible.io/contact).
 
        Have a feature request? Please search the ideas [on our forum](https://github.com/plausible/analytics/discussions/categories/feature-requests) to make sure that the feature has not yet been requested. If you cannot find what you had in mind, please [submit your feature request here](https://github.com/plausible/analytics/discussions/new).
 
-       Have an issue with your self-hosted install? You can ask in [our self-hosted forum](https://github.com/plausible/analytics/discussions/categories/self-hosted-support).
+       Have an issue with your self-hosted install? Self-hosted is community supported and you can ask in [our self-hosted forum](https://github.com/plausible/analytics/discussions/categories/self-hosted-support).
+       
+       Note also that self-hosted is a long term release published twice per year so latest features won’t be immediately available as they’re battled-tested in the cloud first. Take a look [at this list for features available in the self-hosted](https://github.com/plausible/analytics/releases).
 
        **Thanks!**
   - type: checkboxes
@@ -30,6 +32,14 @@ body:
         - label: >-
             This is a bug report and not a feature request, nor asking for self-hosted support
           required: true
+  - type: checkboxes
+  id: version
+  attributes:
+    label: Using Plausible managed hosting or self-hosting?
+    options:
+      - label: Plausible Analytics from Plausible.io
+        required: true
+      - label: I'm self-hosting
   - type: textarea
     id: bug-description
     attributes:
