--- a/priv/ua_inspector/short_codes.client_browsers.yml
+++ b/priv/ua_inspector/short_codes.client_browsers.yml
@@ -2,8 +2,10 @@
 - "2B": "2345 Browser"
 - "36": "360 Phone Browser"
 - "3B": "360 Browser"
+- "7B": "7654 Browser"
 - "AA": "Avant Browser"
 - "AB": "ABrowse"
+- "BW": "AdBlock Browser"
 - "AF": "ANT Fresco"
 - "AG": "ANTGalio"
 - "AL": "Aloha Browser"
@@ -17,10 +19,13 @@
 - "AX": "Arctic Fox"
 - "AV": "Amiga Voyager"
 - "AW": "Amiga Aweb"
+- "AI": "Arvin"
 - "A0": "Atom"
 - "AT": "Atomic Web Browser"
 - "AS": "Avast Secure Browser"
 - "VG": "AVG Secure Browser"
+- "AC": "Avira Scout"
+- "A1": "AwoX"
 - "BA": "Beaker Browser"
 - "BM": "Beamrise"
 - "BB": "BlackBerry Browser"
@@ -32,13 +37,21 @@
 - "BJ": "Bunjalloo"
 - "BL": "B-Line"
 - "BU": "Blue Browser"
+- "BO": "Bonsai"
+- "BN": "Borealis Navigator"
 - "BR": "Brave"
 - "BK": "BriskBard"
 - "BX": "BrowseX"
+- "BZ": "Browzar"
+- "BY": "Biyubi"
+- "BF": "Byffox"
 - "CA": "Camino"
 - "CL": "CCleaner"
+- "CJ": "ChanjetCloud"
+- "C6": "Chedot"
 - "C0": "Centaury"
 - "CC": "Coc Coc"
+- "C4": "CoolBrowser"
 - "C2": "Colibri"
 - "CD": "Comodo Dragon"
 - "C1": "Coast"
@@ -53,22 +66,35 @@
 - "CN": "CoolNovo"
 - "CO": "CometBird"
 - "CB": "COS Browser"
+- "CW": "Cornowser"
+- "C3": "Chim Lac"
 - "CP": "ChromePlus"
 - "CR": "Chromium"
+- "C5": "Chromium GOST"
 - "CY": "Cyberfox"
 - "CS": "Cheshire"
 - "CT": "Crusta"
+- "CG": "Craving Explorer"
+- "CZ": "Crazy Browser"
 - "CU": "Cunaguaro"
 - "CV": "Chrome Webview"
+- "YC": "CyBrowser"
 - "DB": "dbrowser"
+- "PD": "Peeps dBrowser"
+- "DC": "Decentr"
 - "DE": "Deepnet Explorer"
+- "DG": "deg-degan"
+- "DA": "Deledao"
 - "DT": "Delta Browser"
+- "DS": "DeskBrowse"
 - "DF": "Dolphin"
 - "DO": "Dorado"
+- "DR": "Dot Browser"
 - "DL": "Dooble"
 - "DI": "Dillo"
 - "DD": "DuckDuckGo Privacy Browser"
 - "EC": "Ecosia"
+- "EW": "Edge WebView"
 - "EI": "Epic"
 - "EL": "Elinks"
 - "EB": "Element Browser"
@@ -88,18 +114,33 @@
 - "FY": "Firefox Reality"
 - "FR": "Firefox Rocket"
 - "FL": "Flock"
+- "FO": "Flow"
 - "FM": "Firefox Mobile"
 - "FW": "Fireweb"
 - "FN": "Fireweb Navigator"
+- "FH": "Flash Browser"
+- "FS": "Flast"
 - "FU": "FreeU"
 - "GA": "Galeon"
+- "GH": "Ghostery Privacy Browser"
+- "GI": "GinxDroid Browser"
 - "GB": "Glass Browser"
 - "GE": "Google Earth"
+- "GP": "Google Earth Pro"
 - "GO": "GOG Galaxy"
+- "GR": "GoBrowser"
+- "HB": "Harman Browser"
+- "HS": "HasBrowser"
 - "HA": "Hawk Turbo Browser"
+- "HQ": "Hawk Quick Browser"
+- "HE": "Helio"
+- "HI": "Hi Browser"
 - "HO": "hola! Browser"
 - "HJ": "HotJava"
-- "HU": "Huawei Browser"
+- "HU": "Huawei Browser Mobile"
+- "HP": "Huawei Browser"
+- "IO": "iBrowser"
+- "IS": "iBrowser Mini"
 - "IB": "IBrowse"
 - "IC": "iCab"
 - "I2": "iCab Mobile"
@@ -112,7 +153,9 @@
 - "IE": "Internet Explorer"
 - "IM": "IE Mobile"
 - "IR": "Iron"
+- "JB": "Japan Browser"
 - "JS": "Jasmine"
+- "JA": "JavaFX"
 - "JI": "Jig Browser"
 - "JP": "Jig Browser Plus"
 - "JO": "Jio Browser"
@@ -123,19 +166,24 @@
 - "KP": "Kapiko"
 - "KN": "Kinza"
 - "KW": "Kiwi"
+- "KD": "Kode Browser"
 - "KY": "Kylo"
 - "KZ": "Kazehakase"
 - "LB": "Cheetah Browser"
+- "LA": "Lagatos Browser"
 - "LF": "LieBaoFast"
 - "LG": "LG Browser"
 - "LH": "Light"
 - "LI": "Links"
+- "IF": "Lolifox"
 - "LO": "Lovense Browser"
+- "LT": "LT Browser"
 - "LU": "LuaKit"
 - "LL": "Lulumi"
 - "LS": "Lunascape"
 - "LN": "Lunascape Lite"
 - "LX": "Lynx"
+- "MD": "Mandarin"
 - "M1": "mCent"
 - "MB": "MicroB"
 - "MC": "NCSA Mosaic"
@@ -149,7 +197,14 @@
 - "MN": "Minimo"
 - "MT": "Mint Browser"
 - "MX": "Maxthon"
+- "MA": "Maelstrom"
+- "NM": "MxNitro"
 - "MY": "Mypal"
+- "MR": "Monument Browser"
+- "MW": "MAUI WAP Browser"
+- "NA": "Navegador"
+- "NW": "Navigateur Web"
+- "NR": "NFS Browser"
 - "NB": "Nokia Browser"
 - "NO": "Nokia OSS Browser"
 - "NV": "Nokia Ovi Browser"
@@ -163,6 +218,8 @@
 - "OC": "Oculus Browser"
 - "O1": "Opera Mini iOS"
 - "OB": "Obigo"
+- "O2": "Odin"
+- "H2": "OceanHero"
 - "OD": "Odyssey Web Browser"
 - "OF": "Off By One"
 - "HH": "OhHai Browser"
@@ -175,11 +232,13 @@
 - "OP": "Opera"
 - "ON": "Opera Next"
 - "OO": "Opera Touch"
+- "OA": "Orca"
 - "OS": "Ordissimo"
 - "OR": "Oregano"
 - "O0": "Origin In-Game Overlay"
 - "OY": "Origyn Web Browser"
 - "OV": "Openwave Mobile Browser"
+- "O3": "OpenFin"
 - "OW": "OmniWeb"
 - "OT": "Otter Browser"
 - "PL": "Palm Blazer"
@@ -190,10 +249,21 @@
 - "PU": "Puffin"
 - "PW": "Palm WebPro"
 - "PA": "Palmscape"
+- "PE": "Perfect Browser"
+- "PH": "Phantom Browser"
 - "PX": "Phoenix"
+- "PB": "Phoenix Browser"
+- "PF": "PlayFree Browser"
+- "PK": "PocketBook Browser"
 - "PO": "Polaris"
 - "PT": "Polarity"
+- "LY": "PolyBrowser"
+- "PI": "PrivacyWall"
+- "PC": "PSI Secure Browser"
+- "RW": "Reqwireless WebViewer"
 - "PS": "Microsoft Edge"
+- "QA": "Qazweb"
+- "Q2": "QQ Browser Lite"
 - "Q1": "QQ Browser Mini"
 - "QQ": "QQ Browser"
 - "QT": "Qutebrowser"
@@ -206,30 +276,46 @@
 - "RM": "RockMelt"
 - "SB": "Samsung Browser"
 - "SA": "Sailfish Browser"
+- "S8": "Seewo Browser"
 - "SC": "SEMC-Browser"
 - "SE": "Sogou Explorer"
 - "SF": "Safari"
+- "PV": "Safari Technology Preview"
 - "S5": "Safe Exam Browser"
 - "SW": "SalamWeb"
+- "S9": "Secure Browser"
+- "SV": "SFive"
 - "SH": "Shiira"
 - "S1": "SimpleBrowser"
 - "SY": "Sizzy"
 - "SK": "Skyfire"
 - "SS": "Seraphic Sraf"
+- "KK": "SiteKiosk"
 - "SL": "Sleipnir"
+- "S6": "Slimjet"
+- "S7": "SP Browser"
+- "T1": "Stampy Browser"
+- "7S": "7Star"
+- "LE": "Smart Lenovo Browser"
+- "OZ": "Smooz"
 - "SN": "Snowshoe"
 - "SO": "Sogou Mobile Browser"
+- "B1": "Spectre Browser"
 - "S2": "Splash"
 - "SI": "Sputnik Browser"
 - "SR": "Sunrise"
 - "SP": "SuperBird"
 - "SU": "Super Fast Browser"
+- "HR": "Sushi Browser"
 - "S3": "surf"
+- "SG": "Stargon"
 - "S0": "START Internet Browser"
 - "S4": "Steam In-Game Overlay"
 - "ST": "Streamy"
 - "SX": "Swiftfox"
 - "SZ": "Seznam Browser"
+- "TP": "T+Browser"
+- "TR": "T-Browser"
 - "TO": "t-online.de Browser"
 - "TA": "Tao Browser"
 - "TF": "TenFourFox"
@@ -241,9 +327,12 @@
 - "TV": "TV Bro"
 - "UB": "UBrowser"
 - "UC": "UC Browser"
+- "UH": "UC Browser HD"
 - "UM": "UC Browser Mini"
 - "UT": "UC Browser Turbo"
+- "UR": "UR Browser"
 - "UZ": "Uzbl"
+- "VE": "Venus Browser"
 - "VI": "Vivaldi"
 - "VV": "vivo Browser"
 - "VB": "Vision Mobile Browser"
@@ -259,8 +348,12 @@
 - "YA": "Yandex Browser"
 - "YL": "Yandex Browser Lite"
 - "YN": "Yaani Browser"
+- "YB": "Yolo Browser"
+- "YO": "YouCare"
+- "XS": "xStand"
 - "XI": "Xiino"
 - "XV": "Xvast"
+- "ZE": "Zetakey"
 - "ZV": "Zvu"
 - "IA": "Iceape"
 - "SM": "SeaMonkey"
