--- a/priv/ua_inspector/short_codes.oss.yml
+++ b/priv/ua_inspector/short_codes.oss.yml
@@ -1,7 +1,8 @@
 - "AIX": "AIX"
 - "AND": "Android"
+- "ADR": "Android TV"
 - "AMG": "AmigaOS"
-- "ATV": "Apple TV"
+- "ATV": "tvOS"
 - "ARL": "Arch Linux"
 - "BTR": "BackTrack"
 - "SBA": "Bada"
@@ -9,52 +10,85 @@
 - "BLB": "BlackBerry OS"
 - "QNX": "BlackBerry Tablet OS"
 - "BMP": "Brew"
+- "CAI": "Caixa Mágica"
 - "CES": "CentOS"
+- "CLR": "ClearOS Mobile"
 - "COS": "Chrome OS"
+- "CHN": "China OS"
 - "CYN": "CyanogenMod"
 - "DEB": "Debian"
+- "DEE": "Deepin"
 - "DFB": "DragonFly"
+- "DVK": "DVKBuntu"
 - "FED": "Fedora"
+- "FEN": "Fenix"
 - "FOS": "Firefox OS"
 - "FIR": "Fire OS"
+- "FOR": "Foresight Linux"
+- "FRE": "Freebox"
 - "BSD": "FreeBSD"
+- "FYD": "FydeOS"
+- "FUC": "Fuchsia"
 - "GNT": "Gentoo"
+- "GRI": "GridOS"
 - "GTV": "Google TV"
 - "HPX": "HP-UX"
 - "HAI": "Haiku OS"
+- "IPA": "iPadOS"
+- "HAR": "HarmonyOS"
+- "HAS": "HasCodingOS"
 - "IRI": "IRIX"
 - "INF": "Inferno"
+- "JME": "Java ME"
 - "KOS": "KaiOS"
+- "KAN": "Kanotix"
 - "KNO": "Knoppix"
+- "KTV": "KreaTV"
 - "KBT": "Kubuntu"
 - "LIN": "GNU/Linux"
+- "LND": "LindowsOS"
+- "LNS": "Linspire"
 - "LBT": "Lubuntu"
+- "LOS": "Lumin OS"
 - "VLN": "VectorLinux"
 - "MAC": "Mac"
 - "MAE": "Maemo"
+- "MAG": "Mageia"
 - "MDR": "Mandriva"
 - "SMG": "MeeGo"
 - "MCD": "MocorDroid"
+- "MON": "moonOS"
 - "MIN": "Mint"
 - "MLD": "MildWild"
 - "MOR": "MorphOS"
 - "NBS": "NetBSD"
 - "MTK": "MTK / Nucleus"
+- "MRE": "MRE"
 - "WII": "Nintendo"
 - "NDS": "Nintendo Mobile"
 - "OS2": "OS/2"
 - "T64": "OSF1"
 - "OBS": "OpenBSD"
+- "OWR": "OpenWrt"
+- "OTV": "Opera TV"
 - "ORD": "Ordissimo"
+- "PAR": "Pardus"
+- "PCL": "PCLinuxOS"
+- "PLA": "Plasma Mobile"
 - "PSP": "PlayStation Portable"
 - "PS3": "PlayStation"
+- "PUR": "PureOS"
 - "RHT": "Red Hat"
 - "ROS": "RISC OS"
+- "ROK": "Roku OS"
+- "RSO": "Rosa"
 - "REM": "Remix OS"
+- "REX": "REX"
 - "RZD": "RazoDroiD"
 - "SAB": "Sabayon"
 - "SSE": "SUSE"
 - "SAF": "Sailfish OS"
+- "SEE": "SeewoOS"
 - "SLW": "Slackware"
 - "SOS": "Solaris"
 - "SYL": "Syllable"
@@ -67,7 +101,9 @@
 - "TIZ": "Tizen"
 - "TOS": "TmaxOS"
 - "UBT": "Ubuntu"
+- "WAS": "watchOS"
 - "WTV": "WebTV"
+- "WHS": "Whale OS"
 - "WIN": "Windows"
 - "WCE": "Windows CE"
 - "WIO": "Windows IoT"
@@ -76,7 +112,8 @@
 - "WRT": "Windows RT"
 - "XBX": "Xbox"
 - "XBT": "Xubuntu"
-- "YNS": "YunOs"
+- "YNS": "YunOS"
+- "ZEN": "Zenwalk"
 - "IOS": "iOS"
 - "POS": "palmOS"
 - "WOS": "webOS"
