Set license to AGPL-3.0-or-later for assets package (#1852)
As the whole project is AGPL v3 licensed, this just reflects that in
the package.json. This is not changing the tracker JS license.

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,7 @@
 {
   "repository": {},
   "version": "1.4.0",
-  "license": "MIT",
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "deploy": "$(npm bin)/webpack --mode production",
     "watch": "$(npm bin)/webpack --mode development --watch",
