--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,11 @@ jobs:
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
 
+      - name: WAT
+        shell: bash
+        run: ls $GITHUB_WORKSPACE/priv/static
+        id: ls_github_workspace
+
       - name: Prepeare release
         shell: bash
         run: ./rel/prepare_release.sh ${{ steps.extract_branch.outputs.branch }}
