--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ npm-debug.log
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+/priv/version.json
 
 # Files matching config/*.secret.exs pattern contain sensitive
 # data and you should not commit them into version control.
