--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -29,7 +29,7 @@ jobs:
             --health-retries 5
 
       clickhouse:
-        image: yandex/clickhouse-server:21.11
+        image: clickhouse/clickhouse-server:22.8.13.20-alpine
         ports:
           - 8123:8123
         env:
