--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Check Credo Warnings
         run: mix credo diff --from-git-merge-base origin/master
       - name: Run tests
-        run: mix test --include slow --max-failures 1 --warnings-as-errors | .github/bin/log-watch.sh
+        run: mix test --include slow --max-failures 1 --warnings-as-errors
       - name: Check Dialyzer
         run: mix dialyzer
 env:
