--- a/config/.env.dev
+++ b/config/.env.dev
@@ -16,4 +16,5 @@ GOOGLE_CLIENT_ID=875387135161-l8tp53dpt7fdhdg9m1pc3vl42si95rh0.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 PROMEX_DISABLED=false
+SITE_DEFAULT_INGEST_THRESHOLD=1000000
 V2_MIGRATION_DONE=1
