--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build and test
-    runs-on: buildjet-4vcpu-ubuntu-2004
+    runs-on: buildjet-16vcpu-ubuntu-2204
 
     strategy:
       matrix:
@@ -18,6 +18,9 @@ jobs:
     services:
       postgres:
         image: postgres:${{ matrix.postgres_version }}
+        credentials:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
         ports:
           - 5432:5432
         env:
@@ -30,6 +33,9 @@ jobs:
 
       clickhouse:
         image: clickhouse/clickhouse-server:23.3.7.5-alpine
+        credentials:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
         ports:
           - 8123:8123
         env:
@@ -52,7 +58,7 @@ jobs:
           elixir-version: ${{steps.versions.outputs.elixir}}
           otp-version: ${{ steps.versions.outputs.erlang}}
       - name: Restore dependencies cache
-        uses: actions/cache@v3
+        uses: buildjet/cache@v3
         with:
           path: |
             deps
