--- a/priv/ua_inspector/short_codes.client_browsers.yml
+++ b/priv/ua_inspector/short_codes.client_browsers.yml
@@ -89,6 +89,7 @@
 - "BX": "BrowseX"
 - "BZ": "Browzar"
 - "B7": "Browlser"
+- "4B": "BrowsBit"
 - "BY": "Biyubi"
 - "BF": "Byffox"
 - "B4": "BF Browser"
@@ -221,6 +222,7 @@
 - "I4": "IceCat"
 - "ID": "IceDragon"
 - "IV": "Isivioo"
+- "I8": "IVVI Browser"
 - "IW": "Iceweasel"
 - "IN": "Inspect Browser"
 - "IE": "Internet Explorer"
@@ -258,10 +260,12 @@
 - "LH": "Light"
 - "L1": "Lilo"
 - "LI": "Links"
+- "LC": "LogicUI TV Browser"
 - "IF": "Lolifox"
 - "LO": "Lovense Browser"
 - "LT": "LT Browser"
 - "LU": "LuaKit"
+- "LJ": "LUJO TV Browser"
 - "LL": "Lulumi"
 - "LS": "Lunascape"
 - "LN": "Lunascape Lite"
@@ -298,6 +302,7 @@
 - "NO": "Nokia OSS Browser"
 - "NV": "Nokia Ovi Browser"
 - "NX": "Nox Browser"
+- "N1": "NOMone VR Browser"
 - "NE": "NetSurf"
 - "NF": "NetFront"
 - "NL": "NetFront Life"
@@ -306,6 +311,7 @@
 - "WR": "NextWord Browser"
 - "NT": "NTENT Browser"
 - "OC": "Oculus Browser"
+- "O6": "Odd Browser"
 - "O1": "Opera Mini iOS"
 - "OB": "Obigo"
 - "O2": "Odin"
@@ -330,22 +336,26 @@
 - "OR": "Oregano"
 - "O0": "Origin In-Game Overlay"
 - "OY": "Origyn Web Browser"
+- "O8": "OrNET Browser"
 - "OV": "Openwave Mobile Browser"
 - "O3": "OpenFin"
 - "O4": "Open Browser"
 - "4U": "Open Browser 4U"
 - "5G": "Open Browser fast 5G"
+- "O7": "Open TV Browser"
 - "OW": "OmniWeb"
 - "OT": "Otter Browser"
 - "PL": "Palm Blazer"
 - "PM": "Pale Moon"
 - "PY": "Polypane"
 - "PP": "Oppo Browser"
+- "P6": "Opus Browser"
 - "PR": "Palm Pre"
 - "PU": "Puffin"
 - "2P": "Puffin Web Browser"
 - "PW": "Palm WebPro"
 - "PA": "Palmscape"
+- "P7": "Pawxy"
 - "PE": "Perfect Browser"
 - "P1": "Phantom.me"
 - "PH": "Phantom Browser"
@@ -384,6 +394,7 @@
 - "SO": "Sogou Mobile Browser"
 - "RF": "SOTI Surf"
 - "2S": "Soul Browser"
+- "T0": "Soundy Browser"
 - "SF": "Safari"
 - "PV": "Safari Technology Preview"
 - "S5": "Safe Exam Browser"
@@ -470,6 +481,7 @@
 - "WE": "WebPositive"
 - "WF": "Waterfox"
 - "WB": "Wave Browser"
+- "WA": "Wavebox"
 - "WH": "Whale Browser"
 - "WO": "wOSBrowser"
 - "WT": "WeTab Browser"
