--- a/priv/ua_inspector/short_codes.oss.yml
+++ b/priv/ua_inspector/short_codes.oss.yml
@@ -114,6 +114,7 @@
 - "TOS": "TmaxOS"
 - "UBT": "Ubuntu"
 - "WAS": "watchOS"
+- "WER": "Wear OS"
 - "WTV": "WebTV"
 - "WHS": "Whale OS"
 - "WIN": "Windows"
