Update Workflow Concurrency (#3359)
Ensures that only one workflow is running per branch at a time.

If you are working on a branch and push several commits in succession, any workflows in progress will be cancelled and only the last one will run.

--- a/.github/workflows/build-private-images.yml
+++ b/.github/workflows/build-private-images.yml
@@ -8,6 +8,10 @@ on:
     branches: [master]
     types: [synchronize, labeled]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     if: ${{ github.event_name == 'push' || contains(github.event.pull_request.labels.*.name, 'deploy-to-staging') }}
