--- a/.github/workflows/tracker.yml
+++ b/.github/workflows/tracker.yml
@@ -6,6 +6,10 @@ on:
     paths:
       - 'tracker/**'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     timeout-minutes: 15
