--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [master, stable]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Build and test
